--- a/deploy_seq2seq_hybrid_frontend_tutorial.ipynb
+++ b/deploy_seq2seq_hybrid_frontend_tutorial.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3893,6 +3893,68 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.nn.utils.rnn import pack_padded_sequence, pad_packed_sequence\n",
+    "\n",
+    "seqs = ['gigantic_string','tiny_str','medium_str']\n",
+    "\n",
+    "# make <pad> idx 0\n",
+    "vocab = ['<pad>'] + sorted(set(''.join(seqs)))\n",
+    "\n",
+    "# make model\n",
+    "embed = nn.Embedding(len(vocab), 10).cuda()\n",
+    "lstm = nn.LSTM(10, 5).cuda()\n",
+    "\n",
+    "vectorized_seqs = [[vocab.index(tok) for tok in seq] for seq in seqs]\n",
+    "\n",
+    "# get the length of each seq in your batch\n",
+    "seq_lengths = torch.LongTensor([len(seq) for seq in vectorized_seqs]).cuda()\n",
+    "\n",
+    "# dump padding everywhere, and place seqs on the left.\n",
+    "# NOTE: you only need a tensor as big as your longest sequence\n",
+    "seq_tensor = torch.zeros((len(vectorized_seqs), seq_lengths.max())).long().cuda()\n",
+    "for idx, (seq, seqlen) in enumerate(zip(vectorized_seqs, seq_lengths)):\n",
+    "\tseq_tensor[idx, :seqlen] = torch.LongTensor(seq)\n",
+    "\n",
+    "\n",
+    "# SORT YOUR TENSORS BY LENGTH!\n",
+    "seq_lengths, perm_idx = seq_lengths.sort(0, descending=True)\n",
+    "seq_tensor = seq_tensor[perm_idx]\n",
+    "\n",
+    "# utils.rnn lets you give (B,L,D) tensors where B is the batch size, L is the maxlength, if you use batch_first=True\n",
+    "# Otherwise, give (L,B,D) tensors\n",
+    "seq_tensor = seq_tensor.transpose(0,1) # (B,L,D) -> (L,B,D)\n",
+    "\n",
+    "# embed your sequences\n",
+    "seq_tensor = embed(seq_tensor)\n",
+    "\n",
+    "# pack them up nicely\n",
+    "packed_input = pack_padded_sequence(seq_tensor, seq_lengths.cpu().numpy())\n",
+    "\n",
+    "# throw them through your LSTM (remember to give batch_first=True here if you packed with it)\n",
+    "packed_output, (ht, ct) = lstm(packed_input)\n",
+    "\n",
+    "# unpack your output if required\n",
+    "output, _ = pad_packed_sequence(packed_output)\n",
+    "print (output)\n",
+    "\n",
+    "# Or if you just want the final hidden state?\n",
+    "print (ht[-1])\n",
+    "\n",
+    "# REMEMBER: Your outputs are sorted. If you want the original ordering\n",
+    "# back (to compare to some gt labels) unsort them\n",
+    "_, unperm_idx = perm_idx.sort(0)\n",
+    "output = output[unperm_idx]\n",
+    "print (output)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3913,7 +3975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3993,7 +4055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4174,7 +4236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4219,7 +4281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Evaluating an Input\n",
+    "### Evaluating an Input\n",
     "~~~~~~~~~~~~~~~~~~~\n",
     "\n",
     "Next, we define some functions for evaluating an input. The ``evaluate``\n",
@@ -4244,7 +4306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4270,12 +4332,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Evaluate inputs from user input (stdin)"
+    "#### Evaluate inputs from user input (stdin)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4308,7 +4370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4377,18 +4439,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Building encoder and decoder ...\n",
-      "Models built and ready to go!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "save_dir = os.path.join(\"data\", \"save\")\n",
     "corpus_name = \"cornell movie-dialogs corpus\"\n",
@@ -4421,7 +4474,24 @@
     "decoder_sd = checkpoint['de']\n",
     "encoder_optimizer_sd = checkpoint['en_opt']\n",
     "decoder_optimizer_sd = checkpoint['de_opt']\n",
-    "embedding_sd = checkpoint['embedding']\n",
+    "embedding_sd = checkpoint['embedding']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building encoder and decoder ...\n",
+      "Models built and ready to go!\n"
+     ]
+    }
+   ],
+   "source": [
     "voc = Voc(corpus_name)\n",
     "voc.__dict__ = checkpoint['voc_dict']\n",
     "\n",
@@ -4443,6 +4513,34 @@
     "encoder.eval()\n",
     "decoder.eval()\n",
     "print('Models built and ready to go!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### sandbox"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'keys' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-25-127f6312dfde>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvoc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'keys' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "keys(voc)\n"
    ]
   },
   {
