--- a/deploy_seq2seq_hybrid_frontend_tutorial.ipynb
+++ b/deploy_seq2seq_hybrid_frontend_tutorial.ipynb
@@ -23,10 +23,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Deploying a Seq2Seq Model with the Hybrid Frontend\n",
-    "==================================================\n",
-    "**Author:** `Matthew Inkawhich <https://github.com/MatthewInkawhich>`_\n",
-    "\n"
+    "**Deploying a Seq2Seq Model with the Hybrid Frontend**\n",
+    "\n",
+    "**Author:** `Matthew Inkawhich <https://github.com/MatthewInkawhich>`_\n"
    ]
   },
   {
@@ -42,10 +41,14 @@
     "document and use a pretrained model that we host. In the latter case,\n",
     "you can reference the original Chatbot tutorial for details\n",
     "regarding data preprocessing, model theory and definition, and model\n",
-    "training.\n",
-    "\n",
-    "What is the Hybrid Frontend?\n",
-    "----------------------------\n",
+    "training."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What is the Hybrid Frontend?\n",
     "\n",
     "During the research and development phase of a deep learning-based\n",
     "project, it is advantageous to interact with an **eager**, imperative\n",
@@ -94,9 +97,7 @@
     "\n",
     ".. figure:: /_static/img/chatbot/pytorch_workflow.png\n",
     "   :align: center\n",
-    "   :alt: workflow\n",
-    "\n",
-    "\n"
+    "   :alt: workflow"
    ]
   },
   {
@@ -104,7 +105,7 @@
    "metadata": {},
    "source": [
     "Acknowledgements\n",
-    "----------------\n",
+    "\n",
     "\n",
     "This tutorial was inspired by the following sources:\n",
     "\n",
@@ -124,8 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare Environment\n",
-    "-------------------\n",
+    "# Prepare Environment\n",
     "\n",
     "First, we will import the required modules and set some constants. If\n",
     "you are planning on using your own model, be sure that the\n",
@@ -170,8 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Model Overview\n",
-    "--------------\n",
+    "# Model Overview\n",
     "\n",
     "As mentioned, the model that we are using is a\n",
     "`sequence-to-sequence <https://arxiv.org/abs/1409.3215>`__ (seq2seq)\n",
@@ -221,8 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data Handling\n",
-    "-------------\n",
+    "# Data Handling\n",
     "\n",
     "Although our models conceptually deal with sequences of tokens, in\n",
     "reality, they deal with numbers like all machine learning models do. In\n",
@@ -309,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### sandbox"
+    "## sandbox"
    ]
   },
   {
@@ -447,8 +445,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define Encoder\n",
-    "--------------\n",
+    "# Define Encoder\n",
     "\n",
     "We implement our encoder’s RNN with the ``torch.nn.GRU`` module which we\n",
     "feed a batch of sentences (vectors of word embeddings) and it internally\n",
@@ -481,11 +478,6 @@
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -524,7 +516,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### example of usage"
+    "## example of usage"
    ]
   },
   {
@@ -3762,7 +3754,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 何故パックする必要があるか\n",
+    "## 何故パックする必要があるか\n",
     "my sandbox on torch.nn.utils.rnn.pack_padded_sequence"
    ]
   },
@@ -3958,8 +3950,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define Decoder’s Attention Module\n",
-    "---------------------------------\n",
+    "# Define Decoder’s Attention Module\n",
+    "\n",
     "\n",
     "Next, we’ll define our attention module (``Attn``). Note that this\n",
     "module will be used as a submodule in our decoder model. Luong et\n",
@@ -4024,8 +4016,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define Decoder\n",
-    "--------------\n",
+    "# Define Decoder\n",
+    "\n",
     "\n",
     "Similarly to the ``EncoderRNN``, we use the ``torch.nn.GRU`` module for\n",
     "our decoder’s RNN. This time, however, we use a unidirectional GRU. It\n",
@@ -4106,13 +4098,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define Evaluation\n",
-    "\n",
-    "\n",
-    "### Greedy Search Decoder\n",
+    "# Define Evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Greedy Search Decoder\n",
     "* 最初のdecoder出力ワードはone word基準でいちばん確率が高いワード\n",
     "という感じで出力ワードを決定して行く方式\n",
-    "* 別のやり方はbeam searchなどがある（書籍にもあるとおり）\n"
+    "* 別のやり方はbeam searchなどがある（書籍にもあるとおり）"
    ]
   },
   {
@@ -4146,7 +4142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Hybrid Frontend Notes:\n",
+    "## Hybrid Frontend Notes:\n",
     "\n",
     "\n",
     "The ``forward`` method of this module involves iterating over the range\n",
@@ -4281,8 +4277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Evaluating an Input\n",
-    "~~~~~~~~~~~~~~~~~~~\n",
+    "## Evaluating an Input\n",
     "\n",
     "Next, we define some functions for evaluating an input. The ``evaluate``\n",
     "function takes a normalized string sentence, processes it to a tensor of\n",
@@ -4306,7 +4301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4332,7 +4327,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Evaluate inputs from user input (stdin)"
+    "### Evaluate inputs from user input (stdin)"
    ]
   },
   {
@@ -4365,7 +4360,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Normalize input sentence and call evaluate()"
+    "# Normalize input sentence and call evaluate()"
    ]
   },
   {
@@ -4388,8 +4383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load Pretrained Parameters\n",
-    "--------------------------\n",
+    "# Load Pretrained Parameters\n",
     "\n",
     "Ok, its time to load our model!\n",
     "\n",
@@ -4524,21 +4518,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'keys' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-127f6312dfde>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvoc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'keys' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "1+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "keys(voc)\n"
    ]
@@ -4882,8 +4873,12 @@
    "toc_section_display": "block",
    "toc_window_display": true,
    "widenNotebook": false
-  }
+  },
+  "toc-autonumbering": true,
+  "toc-showcode": false,
+  "toc-showmarkdowntxt": false,
+  "toc-showtags": false
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
