debugging predition part

--- a/seq2seq_attention2.ipynb
+++ b/seq2seq_attention2.ipynb
@@ -30,6 +30,8 @@
     "file_path = \"data/date.txt\"\n",
     "\n",
     "input_date = [] # 変換前の日付データ\n",
+    "\n",
+    "\n",
     "output_date = [] # 変換後の日付データ"
    ]
   },
@@ -235,12 +237,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## original"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Attention Decoderクラス\n",
     "class AttentionDecoder(nn.Module):\n",
     "    def __init__(self, vocab_size, embedding_dim, hidden_dim, batch_size):\n",
     "        super(AttentionDecoder, self).__init__()\n",
@@ -300,12 +308,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## after removing comments"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# after removing comments\n",
     "class AttentionDecoder(nn.Module):\n",
     "    def __init__(self, vocab_size, embedding_dim, hidden_dim, batch_size):\n",
     "        super(AttentionDecoder, self).__init__()\n",
@@ -345,12 +359,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## my refactored version"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# my refactored version\n",
     "class AttentionDecoder(nn.Module):\n",
     "    def __init__(self, vocab_size, embedding_dim, hidden_dim, batch_size):\n",
     "        super(AttentionDecoder, self).__init__()\n",
@@ -370,23 +390,14 @@
     "        \n",
     "        attention_weight = self.softmax(s) \n",
     "        \n",
-    "        #c = torch.zeros(self.batch_size, 1, self.hidden_dim, device=device) # c.size() = ([100, 1, 128])\n",
-    "\n",
-    "\n",
-    "        #ctmp = torch.matmul(torch.transpose(hs,1,2) , attention_weight)\n",
     "        c = torch.matmul(torch.transpose(attention_weight, 1,2) ,hs)\n",
-    "        #c = c[:,1:,:]\n",
+    "    \n",
     "        #Pdb().set_trace()\n",
     "\n",
     "        output = torch.cat([output, c], dim=2) # output.size() = ([100, 10, 256])\n",
     "        output = self.hidden2linear(output)\n",
     "        return output, state, attention_weight     "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -407,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -415,23 +426,24 @@
      "output_type": "stream",
      "text": [
       "training ...\n",
-      "Epoch 1: 1457.25\n",
-      "Epoch 2: 24.44\n",
-      "Epoch 3: 9.72\n",
-      "Epoch 4: 3.82\n",
-      "Epoch 5: 2.15\n",
-      "Epoch 6: 1.37\n",
-      "Epoch 7: 0.94\n",
-      "Epoch 8: 0.68\n",
-      "Epoch 9: 0.50\n",
-      "Epoch 10: 0.39\n",
-      "Epoch 11: 27.11\n",
-      "Epoch 12: 3.63\n",
-      "Epoch 13: 0.99\n",
-      "Epoch 14: 0.59\n",
-      "Epoch 15: 0.40\n",
-      "Epoch 16: 0.29\n",
-      "Epoch 17: 0.22\n"
+      "Epoch 1: 1484.61\n",
+      "Epoch 2: 53.06\n",
+      "Epoch 3: 20.91\n",
+      "Epoch 4: 4.07\n",
+      "Epoch 5: 14.31\n",
+      "Epoch 6: 2.36\n",
+      "Epoch 7: 1.38\n",
+      "Epoch 8: 0.90\n",
+      "Epoch 9: 0.64\n",
+      "Epoch 10: 0.48\n",
+      "Epoch 11: 0.37\n",
+      "Epoch 12: 0.29\n",
+      "Epoch 13: 0.22\n",
+      "Epoch 14: 0.18\n",
+      "Epoch 15: 0.14\n",
+      "Epoch 16: 0.12\n",
+      "Epoch 17: 0.09\n",
+      "Done\n"
      ]
     }
    ],
@@ -525,10 +537,249 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "from plotnine import *"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_loss = pd.DataFrame({\"loss\":all_losses})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_loss = df_loss.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ggplot(df_loss , aes(x = \"index\", y = \"loss\")) + geom_line() + theme_minimal()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Decoderのアウトプットのテンソルから要素が最大のインデックスを返す。つまり生成文字を意味する\n",
+    "def get_max_index(decoder_output):\n",
+    "  results = []\n",
+    "  for h in decoder_output:\n",
+    "    results.append(torch.argmax(h))\n",
+    "  return torch.tensor(results, device=device).view(BATCH_NUM, 1)\n",
+    "\n",
+    "# 評価用データ\n",
+    "test_input_batch, test_output_batch = train2batch(test_x, test_y)\n",
+    "input_tensor = torch.tensor(test_input_batch, device=device)\n",
+    "\n",
+    "predicts = []\n",
+    "for i in range(len(test_input_batch)):\n",
+    "  with torch.no_grad():\n",
+    "    hs, encoder_state = encoder(input_tensor[i])\n",
+    "\n",
+    "    # Decoderにはまず文字列生成開始を表す\"_\"をインプットにするので、\"_\"のtensorをバッチサイズ分作成\n",
+    "    start_char_batch = [[char2id[\"_\"]] for _ in range(BATCH_NUM)]\n",
+    "    decoder_input_tensor = torch.tensor(start_char_batch, device=device)\n",
+    "\n",
+    "    decoder_hidden = encoder_state\n",
+    "    batch_tmp = torch.zeros(100,1, dtype=torch.long, device=device)\n",
+    "    for _ in range(output_len - 1):\n",
+    "      decoder_output, decoder_hidden, _ = attn_decoder(decoder_input_tensor, hs, decoder_hidden)\n",
+    "      # 予測文字を取得しつつ、そのまま次のdecoderのインプットとなる\n",
+    "      decoder_input_tensor = get_max_index(decoder_output.squeeze())\n",
+    "      batch_tmp = torch.cat([batch_tmp, decoder_input_tensor], dim=1)\n",
+    "    predicts.append(batch_tmp[:,1:])\n",
+    "\n",
+    "\n",
+    "# 予測結果を見る際にIDのままだと可読性が悪いので、もとの文字列に復元するためのID→文字列に変換する辞書を定義\n",
+    "id2char = {}\n",
+    "for k, v in char2id.items():\n",
+    "  id2char[v] = k\n",
+    "\n",
+    "row = []\n",
+    "for i in range(len(test_input_batch)):\n",
+    "  batch_input = test_input_batch[i]\n",
+    "  batch_output = test_output_batch[i]\n",
+    "  batch_predict = predicts[i]\n",
+    "  for inp, output, predict in zip(batch_input, batch_output, batch_predict):\n",
+    "    x = [id2char[idx] for idx in inp]\n",
+    "    y = [id2char[idx] for idx in output[1:]]\n",
+    "    p = [id2char[idx.item()] for idx in predict]\n",
+    "\n",
+    "    x_str = \"\".join(x)\n",
+    "    y_str = \"\".join(y)\n",
+    "    p_str = \"\".join(p)\n",
+    "\n",
+    "    judge = \"O\" if y_str == p_str else \"X\"\n",
+    "    row.append([x_str, y_str, p_str, judge])\n",
+    "predict_df = pd.DataFrame(row, columns=[\"input\", \"answer\", \"predict\", \"judge\"])\n",
+    "predict_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# prediction (refactored)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "input_tensor = torch.tensor(test_x).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hs, encoder_state =encoder(input_tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15000"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(test_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Decoderにはまず文字列生成開始を表す\"_\"をインプットにするので、\"_\"のtensorをバッチサイズ分作成\n",
+    "start_char_batch = [[char2id[\"_\"]] for _ in range(len(test_x))]\n",
+    "decoder_input_tensor = torch.tensor(start_char_batch, device=device)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(output_len - 1):\n",
+    "    output , _ , _ = attn_decoder(decoder_input_tensor, hs, encoder_state)\n",
+    "    decoder_input_tensor = torch.argmax(output ,dim = 2)\n",
+    "    #decoder_input_tensor = torch.cat([decoder_input_tensor,torch.argmax(output ,dim = 2)] , dim = 1) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "?get_max_index\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Decoderのアウトプットのテンソルから要素が最大のインデックスを返す。つまり生成文字を意味する\n",
+    "def get_max_index(decoder_output):\n",
+    "  results = []\n",
+    "  for h in decoder_output:\n",
+    "    results.append(torch.argmax(h))\n",
+    "  return torch.tensor(results, device=device).view(BATCH_NUM, 1)\n",
+    "\n",
+    "# 評価用データ\n",
+    "test_input_batch, test_output_batch = train2batch(test_x, test_y)\n",
+    "input_tensor = torch.tensor(test_input_batch, device=device)\n",
+    "\n",
+    "predicts = []\n",
+    "for i in range(len(test_input_batch)):\n",
+    "  with torch.no_grad():\n",
+    "    hs, encoder_state = encoder(input_tensor[i])\n",
+    "\n",
+    "    # Decoderにはまず文字列生成開始を表す\"_\"をインプットにするので、\"_\"のtensorをバッチサイズ分作成\n",
+    "    start_char_batch = [[char2id[\"_\"]] for _ in range(BATCH_NUM)]\n",
+    "    decoder_input_tensor = torch.tensor(start_char_batch, device=device)\n",
+    "\n",
+    "    decoder_hidden = encoder_state\n",
+    "    batch_tmp = torch.zeros(100,1, dtype=torch.long, device=device)\n",
+    "    for _ in range(output_len - 1):\n",
+    "      decoder_output, decoder_hidden, _ = attn_decoder(decoder_input_tensor, hs, decoder_hidden)\n",
+    "      # 予測文字を取得しつつ、そのまま次のdecoderのインプットとなる\n",
+    "      decoder_input_tensor = get_max_index(decoder_output.squeeze())\n",
+    "      batch_tmp = torch.cat([batch_tmp, decoder_input_tensor], dim=1)\n",
+    "    predicts.append(batch_tmp[:,1:])\n",
+    "\n",
+    "\n",
+    "# 予測結果を見る際にIDのままだと可読性が悪いので、もとの文字列に復元するためのID→文字列に変換する辞書を定義\n",
+    "id2char = {}\n",
+    "for k, v in char2id.items():\n",
+    "  id2char[v] = k\n",
+    "\n",
+    "row = []\n",
+    "for i in range(len(test_input_batch)):\n",
+    "  batch_input = test_input_batch[i]\n",
+    "  batch_output = test_output_batch[i]\n",
+    "  batch_predict = predicts[i]\n",
+    "  for inp, output, predict in zip(batch_input, batch_output, batch_predict):\n",
+    "    x = [id2char[idx] for idx in inp]\n",
+    "    y = [id2char[idx] for idx in output[1:]]\n",
+    "    p = [id2char[idx.item()] for idx in predict]\n",
+    "\n",
+    "    x_str = \"\".join(x)\n",
+    "    y_str = \"\".join(y)\n",
+    "    p_str = \"\".join(p)\n",
+    "\n",
+    "    judge = \"O\" if y_str == p_str else \"X\"\n",
+    "    row.append([x_str, y_str, p_str, judge])\n",
+    "predict_df = pd.DataFrame(row, columns=[\"input\", \"answer\", \"predict\", \"judge\"])\n",
+    "predict_df.head()"
+   ]
   }
  ],
  "metadata": {
@@ -548,7 +799,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
-  }
+  },
+  "toc-autonumbering": true
  },
  "nbformat": 4,
  "nbformat_minor": 4
